HV-1935 Test Hibernate Validator against JDK 21